enable the panama vector api in benchmark runs